--- a/Upload.html
+++ b/Upload.html
@@ -55,7 +55,7 @@
                 };
                 photoPreview.src = picURL;
                 document.getElementById("preview").appendChild(photoPreview);
-                windowURL.revokeObjectURL(picURL);
+                //windowURL.revokeObjectURL(picURL);
             }
         }
 
