--- a/Upload.html
+++ b/Upload.html
@@ -55,7 +55,7 @@
                 };
                 photoPreview.src = picURL;
                 document.getElementById("preview").appendChild(photoPreview);
-                //windowURL.revokeObjectURL(picURL);
+                windowURL.revokeObjectURL(picURL);
             }
         }
 
@@ -64,7 +64,7 @@
             for (var count = 0; count < fileList.length; count++) {
                 var windowURL = window.URL || window.webkitURL;
                 var picURL = windowURL.createObjectURL(fileList[count]);
-                var canvas = document.createElement("canvas");
+                var canvas = document.getElementById("captured"+count);
                
                 var ctx = canvas.getContext("2d");
                 //create image
@@ -94,6 +94,8 @@
         <canvas id="capturedPhoto" width="500" height="400"></canvas>
         <input type="button" id="btnPreview" onclick="ShowAllUpload()" value="Preview" />
         <div id="preview">
+             <canvas id="captured1" width="100" height="100"></canvas>
+            <canvas id="captured2" width="100" height="100"></canvas>
         </div>
     </div>
 </body>
