--- a/Upload.html
+++ b/Upload.html
@@ -45,19 +45,24 @@
                 };
                 photo.src = picURL;
 
-                var photoCanvasPre = document.getElementById("capturedPhotoPreview");
-                var ctxPre = photoCanvasPre.getContext("2d");
+                //var photoCanvasPre = document.getElementById("capturedPhotoPreview");
+                //var ctxPre = photoCanvasPre.getContext("2d");
                 fileList.push(new Blob(fileInput));
-                var photoPreview = new Image();
-                photoPreview.width = 100;
-                photoPreview.height = 100;
-               // ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
-                photoPreview.onload = function () {
-                    //draw photo into canvas when ready
-                    ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
-                };
-                photoPreview.src = windowURL.createObjectURL(fileInput[0]);
-                document.getElementById("preview").appendChild(photoPreview);
+               // var photoPreview = new Image();
+               // photoPreview.width = 100;
+               // photoPreview.height = 100;
+               //// ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
+               // photoPreview.onload = function () {
+               //     //draw photo into canvas when ready
+               //     ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
+               // };
+               // photoPreview.src = windowURL.createObjectURL(fileInput[0]);
+                // document.getElementById("preview").appendChild(photoPreview);
+                var img = document.createElement("img")
+                img.height = 100;
+                img.width = 100;
+                img.src = windowURL.createObjectURL(fileInput[0]);
+                document.getElementById("preview").appendChild(img);
                 windowURL.revokeObjectURL(picURL);
             }
         }
@@ -79,7 +84,7 @@
                 //    //draw photo into canvas when ready
                 //    ctx.drawImage(photo, 0, 0, 500, 400);
                 //};
-                photo.src = picURL;               
+                photo.src = picURL;
                 document.getElementById("preview").appendChild(photo);
                 windowURL.revokeObjectURL(picURL);
             }
@@ -96,7 +101,7 @@
             Photo:
         </p>
         <canvas id="capturedPhoto" width="500" height="400"></canvas>
-        <canvas id="capturedPhotoPreview" width="500" height="400"></canvas>
+        <!--<canvas id="capturedPhotoPreview" width="500" height="400"></canvas>-->
         <input type="button" id="btnPreview" onclick="ShowAllUpload()" value="Preview" />
         <div id="preview">
           
