--- a/Upload.html
+++ b/Upload.html
@@ -33,12 +33,11 @@
                 //window url
                 var windowURL = window.URL || window.webkitURL;
 
-                var img = document.createElement("img")
+                 var img = document.createElement("img")
                 img.height = 100;
                 img.width = 100;
                 img.src = windowURL.createObjectURL(fileInput[0]);
                 document.getElementById("preview").appendChild(img);
-
                 //picture url
                 var picURL = windowURL.createObjectURL(fileInput[0]);
                 //get canvas
@@ -52,8 +51,25 @@
                 };
                 photo.src = picURL;
 
-                fileList.push(new Blob(fileInput));              
-               windowURL.revokeObjectURL(picURL);
+                //var photoCanvasPre = document.getElementById("capturedPhotoPreview");
+                //var ctxPre = photoCanvasPre.getContext("2d");
+                fileList.push(new Blob(fileInput));
+               // var photoPreview = new Image();
+               // photoPreview.width = 100;
+               // photoPreview.height = 100;
+               //// ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
+               // photoPreview.onload = function () {
+               //     //draw photo into canvas when ready
+               //     ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
+               // };
+               // photoPreview.src = windowURL.createObjectURL(fileInput[0]);
+                // document.getElementById("preview").appendChild(photoPreview);
+                var img = document.createElement("img")
+                img.height = 100;
+                img.width = 100;
+                img.src = windowURL.createObjectURL(fileInput[0]);
+                document.getElementById("preview").appendChild(img);
+               // windowURL.revokeObjectURL(picURL);
             }
         }
 
