--- a/Upload.html
+++ b/Upload.html
@@ -33,43 +33,14 @@
                 //window url
                 var windowURL = window.URL || window.webkitURL;
 
-                 var img = document.createElement("img")
-                img.height = 100;
-                img.width = 100;
-                img.src = windowURL.createObjectURL(fileInput[0]);
-                document.getElementById("preview").appendChild(img);
-                //picture url
-                var picURL = windowURL.createObjectURL(fileInput[0]);
-                //get canvas
-                var photoCanvas = document.getElementById("capturedPhoto");
-                var ctx = photoCanvas.getContext("2d");
-                //create image
-                var photo = new Image();
-                photo.onload = function () {
-                    //draw photo into canvas when ready
-                    ctx.drawImage(photo, 0, 0, 500, 400);
-                };
-                photo.src = picURL;
-
-                //var photoCanvasPre = document.getElementById("capturedPhotoPreview");
-                //var ctxPre = photoCanvasPre.getContext("2d");
-                fileList.push(new Blob(fileInput));
-               // var photoPreview = new Image();
-               // photoPreview.width = 100;
-               // photoPreview.height = 100;
-               //// ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
-               // photoPreview.onload = function () {
-               //     //draw photo into canvas when ready
-               //     ctxPre.drawImage(photoPreview, 0, 0, 500, 400);
-               // };
-               // photoPreview.src = windowURL.createObjectURL(fileInput[0]);
-                // document.getElementById("preview").appendChild(photoPreview);
+                 var imgdiv = document.getElementById("divcapturedPhoto")               
+                 imgdiv.src = windowURL.createObjectURL(fileInput[0]);                              
+                fileList.push(new Blob(fileInput));              
                 var img = document.createElement("img")
                 img.height = 100;
                 img.width = 100;
                 img.src = windowURL.createObjectURL(fileInput[0]);
-                document.getElementById("preview").appendChild(img);
-               // windowURL.revokeObjectURL(picURL);
+                document.getElementById("preview").appendChild(img);               
             }
         }
 
@@ -106,8 +77,7 @@
         <p>
             Photo:
         </p>
-        <canvas id="capturedPhoto" width="500" height="400"></canvas>
-        <!--<canvas id="capturedPhotoPreview" width="500" height="400"></canvas>-->
+		<img  id="divcapturedPhoto" style="width:100%;height:100%"> </img>            
         <input type="button" id="btnPreview" onclick="ShowAllUpload()" value="Preview" />
         <div id="preview">
           
